--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,4 @@ permalink:    pretty
 exclude: ["README.md", "CNAME"]
 
 # Server
-production_url : http://juetpy.link-webcreations.fr
-# source:       ./docs
-# destination:  ./_gh_pages
-# port:         9001
-# url:          http://getbootstrap.dev:9001
+# production_url : http://juetpy.link-webcreations.fr
