--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ markdown: rdiscount
 pygments: true
 
 # Permalinks
-permalink: pretty
+permalink: /blog/:categories/:year/:month/:day/:title/
 
 # Files to exclude
 exclude: ["README.md", "CNAME"]
