--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # production_url: http://juetpy.link-webcreations.fr
 url: http://link-webcreations.github.io/juetpy
-title: &middot; JuEtPy
+title: "&middot; JuEtPy"
 author: Yves ANDOLFATTO
 description: Blog du Voyage en amérique du sud
 
