--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ markdown:       rdiscount
 pygments:       true
 exclude:        ["README.md", "CNAME"]
 paginate:       5
-#paginate_path:  "articles/page:num"
+paginate_path:  "articles/page:num"
 
 # ----------------------- #
 #   3rd Party Settings    #
