--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-#url:          http://link-webcreations.github.io/juetpy
+url:          http://link-webcreations.github.io/juetpy
 author:       Yves ANDOLFATTO
 description:  Blog du Voyage en amérique du sud
 
