Add pagination plugin

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ description:  Blog du Voyage en amérique du sud
 
 #permalink:      pretty
 paginate:       5
+paginate_file:  articles.html
 markdown:       rdiscount
 pygments:       true
 exclude:        ["README.md", "CNAME"]
