--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,10 @@ paginate:           5
 pagination_roots:   ['/articles']
 markdown:           rdiscount
 exclude:            ["README.md", "CNAME"]
+gallery:
+    dir:            photos
+    title:          "PhotosTiiiiitre"
+    title_prefix:   "PrefixFotoooo: "
 
 # ----------------------- #
 #   3rd Party Settings    #
