--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----------------------- #
 #      Main Configs       #
 # ----------------------- #
-url:          http://link-webcreations.github.io/juetpy
+url:          jusetpy.fr
 author:       Yves ANDOLFATTO
 description:  Blog du Voyage en amérique du sud
 
