Update bootstrap version

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 url:          jusetpy.fr
 author:       Yves ANDOLFATTO
-description:  Blog du Voyage en amérique du sud
+description:  Blog du voyage en amérique du sud
 
 # ----------------------- #
 #    Jekyll & Plugins     #
