--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----------------------- #
 #      Main Configs       #
 # ----------------------- #
-url:          jusetpy.fr
+url:          link-webcreations.github.io/juetpy/
 author:       Yves ANDOLFATTO
 description:  Blog du voyage en amérique du sud
 
